--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -186,8 +186,10 @@ length(libReturn$results[,1])
     d.  Utiliza la función **summary**, sobre **cabbages** y **Chile** y observa como, además de otros estadísticos, también devuelve el número de valores perdidos de cada variable.
 
 ```{r}
-
-
+#a.
+nrow(cabbages)
+ncol(cabbages)
+str(cabbages)
 
 
 
