--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -206,24 +206,13 @@ summary(Chile)
 
 
 
-
-
-
-
-
-
-
-
-
 ```
 
 5.  Muchas pruebas estadísticas suponen que los datos siguen una distribución Gaussiana. Utiliza la aproximación visual proporcionada por **qqPlot** para determinar si podemos asumir que las variables **HeadWt** y **VitC** del conjunto **cabbages** verifican esta condición.
 
 ```{r}
-
-
-
-
+qqPlot(cabbages$HeadWt)
+qqPlot(cabbages$VitC)
 
 ```
 
