--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -264,16 +264,16 @@ b.  Repite el apartado anterior, pero obteniendo un modelo para cada una de las 
 #No existe una relacion lineal
 plot(cabbages$VitC ~ cabbages$HeadWt)
 
+#b.
 
+plot(cabbages$VitC ~ cabbages$HeadWt, pch=c(1,18)[cabbages$Cult])
 
+Modeloc39 <- lm(cabbages$VitC ~ cabbages$HeadWt, data=cabbages, subset=which(Cult=="c39"))
 
+Modeloc52 <- lm(cabbages$VitC ~ cabbages$HeadWt, data=cabbages, subset=which(Cult=="c52"))
 
-
-
-
-
-
-
+abline(Modeloc39, lty=3)
+abline(Modeloc52)
 
 
 ```
